0024590: Crash when processing OpenGl_BndBoxPrs objects

Eliminate TelType enumeration
Cosmetics, warnings